--- a/publcations.html
+++ b/publcations.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb">
 <head><script src="js/analytics.js" type="text/javascript"></script>
-<script type="text/javascript">window.addEventListener('DOMContentLoaded',function(){var v=archive_analytics.values;v.service='wb';v.server_name=''})</script>
 <script type="text/javascript" src="js/bundle-playback.js" charset="utf-8"></script>
 <script type="text/javascript" src="js/wombat.js" charset="utf-8"></script>
 <script>window.RufflePlayer=window.RufflePlayer||{};window.RufflePlayer.config={"autoplay":"on","unmuteOverlay":"hidden"};</script>
@@ -338,7 +337,7 @@ background-color: #be0926 !important;
 </div><div id="wm-ipp-inside">
   <div id="wm-toolbar" style="position:relative;display:flex;flex-flow:row nowrap;justify-content:space-between;">
     <div id="wm-logo" style="/*width:110px;*/padding-top:12px;">
-      <a href="" title=" home page"><img src="/images/wayback-toolbar-logo-200.png" srcset="" alt="" style="width:100px" border="0" /></a>
+      <a  title="home page"><img src="/images/toolbar-logo-200.png" srcset="" alt="" style="width:100px" border="0" /></a>
     </div>
     <div class="c" style="display:flex;flex-flow:column nowrap;justify-content:space-between;flex:1;">
       <form class="u" style="display:flex;flex-direction:row;flex-wrap:nowrap;" target="_top" method="get" action="/web/submit" name="wmtb" id="wmtb"><input type="text" name="url" id="wmtbURL" value="/publications.html" onfocus="this.focus();this.select();" style="flex:1;"/><input type="hidden" name="type" value="replay" /><input type="hidden" name="date" value="20160131201204" /><input type="submit" value="Go" />
@@ -347,7 +346,7 @@ background-color: #be0926 !important;
                 <div class="s" id="wm-nav-captures" style="flex:1;">
           </div>
         <div class="k">
-          <a href="" id="wm-graph-anchor">
+          <a  id="wm-graph-anchor">
             <div id="wm-ipp-sparkline" title="Explore captures for this URL" style="position: relative">
               <canvas id="wm-sparkline-canvas" width="725" height="27" border="0"></canvas>
             </div>
@@ -384,15 +383,15 @@ background-color: #be0926 !important;
                 <span class="xxs">
           <div id="wm-save-snapshot-success">success</div>
           <div id="wm-save-snapshot-fail">fail</div>
-          <a id="wm-save-snapshot-open" href="#" title="Share via My Web Archive" >
+          <a id="wm-save-snapshot-open"   >
             <span class="iconochive-web"></span>
           </a>
-          <a href="" title="Sign In" id="wm-sign-in">
+          <a  title="Sign In" id="wm-sign-in">
             <span class="iconochive-person"></span>
           </a>
           <span id="wm-save-snapshot-in-progress" class="iconochive-web"></span>
         </span>
-                <a class="xxs" href="" title="Get some help using the " style="top:-6px;"><span class="iconochive-question" style="color:rgb(87,186,244);font-size:160%;"></span></a>
+                <a class="xxs"  title="Get some help using the " style="top:-6px;"><span class="iconochive-question" style="color:rgb(87,186,244);font-size:160%;"></span></a>
         <a id="wm-tb-close" href="#close" style="top:-2px;" title="Close the toolbar"><span class="iconochive-remove-circle" style="color:#888888;font-size:240%;"></span></a>
       </div>
       <div id="wm-share" class="xxs">
@@ -401,11 +400,11 @@ background-color: #be0926 !important;
            title="screenshot">
           <span class="wm-icon-screen-shot"></span>
         </a>
-        <a href="#" id="wm-video" title="video">
+        <a  id="wm-video" title="video">
           <span class="iconochive-movies"></span>
         </a>
-        <a id="wm-share-facebook" href="#" data-url="/publcations.html" title="Share on Facebook" style="margin-right:5px;" target="_blank"><span class="iconochive-facebook" style="color:#3b5998;font-size:160%;"></span></a>
-        <a id="wm-share-twitter" href="#" data-url="/publcations.html" title="Share on Twitter" style="margin-right:5px;" target="_blank"><span class="iconochive-twitter" style="color:#1dcaff;font-size:160%;"></span></a>
+        <a id="wm-share-facebook"  data-url="/publcations.html" title="Share on Facebook" style="margin-right:5px;" target="_blank"><span class="iconochive-facebook" style="color:#3b5998;font-size:160%;"></span></a>
+        <a id="wm-share-twitter"  data-url="/publcations.html" title="Share on Twitter" style="margin-right:5px;" target="_blank"><span class="iconochive-twitter" style="color:#1dcaff;font-size:160%;"></span></a>
       </div>
       <div style="padding-right:2px;text-align:right;white-space:nowrap;">
         <a id="wm-expand" class="wm-btn wm-closed" href="#expand" onclick="__wm.ex(event);return false;"><span id="wm-expand-icon" class="iconochive-down-solid"></span> <span class="xxs" style="font-size:80%;">About this capture</span></a>
@@ -419,19 +418,15 @@ background-color: #be0926 !important;
     <div style="padding:3px;position:relative" id="wm-collected-by-content">
             <div style="display:inline-block;vertical-align:top;width:50%;">
 			<span class="c-logo" style="background-image:url(/images/webwidecrawl.jpeg);"></span>
-		Organization: <a style="color:#33f;" href="" target="_new"><span class="wm-title">Internet Archive</span></a>
+		Organization: <a style="color:#33f;"  target="_new"><span class="wm-title"></span></a>
 		<div style="max-height:75px;overflow:hidden;position:relative;">
 	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
-	  The Internet Archive discovers and captures web pages through many different web crawls.
-
-At any given time several distinct crawls are running, some for months, and some every day or longer.
-
-View the web archive through the <a href=""></a>.
+	  
 	</div>
 	      </div>
       <div style="display:inline-block;vertical-align:top;width:49%;">
 			<span class="c-logo" style="background-image:url(/images/wide00013.jpeg)"></span>
-		<div>Collection: <a style="color:#33f;" href="" target="_new"><span class="wm-title">Survey Crawl Number 4</span></a></div>
+		<div>Collection: <a style="color:#33f;"  target="_new"><span class="wm-title">Survey Crawl Number 4</span></a></div>
 		<div style="max-height:75px;overflow:hidden;position:relative;">
 	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
 	  <p>The seed for this crawl was a list of every host in the </p>
@@ -606,7 +601,7 @@ window.onload = init16();
                 <div id="pied_news"></div>
                 </div>
                 <div style="padding-left: 50%; margin-left: -34px;">
-                								<a href="" target="_blank"><div id="fp72"></div></a>
+                								<a  target="_blank"><div id="fp72"></div></a>
                 </div>
             </div>
                         <div id="contenu"> <div style="width:493px;">                       
@@ -634,7 +629,7 @@ window.onload = init16();
 <p><span style="font-family: verdana, geneva; font-size: 8pt;">&nbsp;</span></p>
 <p><span style="font-family: verdana, geneva; font-size: 8pt;">Allo Docteur Programme on RDC TV local Channel</span></p>
 <p><img src="/images/Image_Allo_Docteur (1).jpeg" width="152" height="109" alt="NIDIAG Allo Docteur" style="line-height: 1.3em;"/></p>
-<p><span style="font-family: verdana, geneva; color: #000000; font-size: 10pt;"><span style="font-size: 8pt;">Presentation of the NIDIAG activities with investigators from NIDIAG project. Please consult these 2 links:&nbsp;<a href="" target="_blank">link1</a>&nbsp;and&nbsp;<a href="" target="_blank">link 2</a>.</span></span></p>
+<p><span style="font-family: verdana, geneva; color: #000000; font-size: 10pt;"><span style="font-size: 8pt;">Presentation of the NIDIAG activities with investigators from NIDIAG project. Please consult these 2 links:&nbsp;<a  target="_blank">link1</a>&nbsp;and&nbsp;<a  target="_blank">link 2</a>.</span></span></p>
 <p><span style="font-family: verdana, geneva; color: #000000; font-size: 10pt;"><strong>&nbsp;</strong></span></p>
 <p><strong style="font-size: 10pt; line-height: 1.3em;"><span style="font-family: verdana, geneva;"><span style="color: #f29400;">Publications in peer-reviewed journals with acknowledgement of NIDIAG</span> </span></strong></p>
 <p>&nbsp;</p>
@@ -642,9 +637,9 @@ window.onload = init16();
 <p style="text-align: justify;"><strong><span style="font-family: verdana, geneva; font-size: 8pt; color: #f29400;"></span></strong></p>
 <p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">Becker SL, Piraisoody N, Kramme S, Marti H, Silué KD, Panning M, Nickel B, Kern WV, Herrmann M, Hatz CF, N’Goran EK, Utzinger J, von Müller L. Real-time PCR for detection of Strongyloides stercoralis in human stool samples from Côte d’Ivoire: diagnostic accuracy, inter-laboratory comparison and patterns of hookworm co-infection. Acta Trop ; 150:210-217 [Epub ahead of print].</span></p>
 <p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">Becker SL, Chatigre JK, Coulibaly JT, Mertens P, Bonfoh B, Herrmann M, Kuijper EJ, N'Goran EK, Utzinger J, von Müller L. Molecular and culture-based diagnosis of Clostridium difficile isolates from Côte d'Ivoire after prolonged storage at disrupted cold chain conditions. Trans R Soc Trop Med Hyg. ;109(10):660-8. doi: 10.1093/trstmh/trv071. Epub  Sep 8.</span></p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">Becker SL, Chappuis F, Polman K, N'Goran EK, von Müller L, Utzinger J. Reply: epidemiological studies need asymptomatic controls. Clin Microbiol Infect  (electronically published ahead of print), <a href=""></a></span></p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">Becker SL, Chatigre JK, Gohou JP, Coulibaly JT, Leuppi R, Polman K et al. Combined stool-based multiplex PCR and microscopy for enhanced pathogen detection in patients with persistent diarrhoea and asymptomatic controls from Côte d'Ivoire. Clin Microbiol Infect  (electronically published ahead of print), <a href=""></a></span></p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">Utzinger J, Becker SL, van Lieshout L, van Dam GJ, Knopp S. New diagnostic tools in schistosomiasis. Clin Microbiol Infect  (electronically published ahead of print), </span><span style="font-family: verdana, geneva; font-size: 8pt;"><a href=""></a><a href=""></a></span></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">Becker SL, Chappuis F, Polman K, N'Goran EK, von Müller L, Utzinger J. Reply: epidemiological studies need asymptomatic controls. Clin Microbiol Infect  (electronically published ahead of print), <a ></a></span></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">Becker SL, Chatigre JK, Gohou JP, Coulibaly JT, Leuppi R, Polman K et al. Combined stool-based multiplex PCR and microscopy for enhanced pathogen detection in patients with persistent diarrhoea and asymptomatic controls from Côte d'Ivoire. Clin Microbiol Infect  (electronically published ahead of print), <a ></a></span></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">Utzinger J, Becker SL, van Lieshout L, van Dam GJ, Knopp S. New diagnostic tools in schistosomiasis. Clin Microbiol Infect  (electronically published ahead of print), </span><span style="font-family: verdana, geneva; font-size: 8pt;"><a ></a><a ></a></span></p>
 <p style="text-align: justify;">&nbsp;</p>
 <p style="text-align: justify;">&nbsp;</p>
 <p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;"></span><span style="color: #f29400;"><strong><span style="font-family: verdana, geneva; font-size: 8pt;"></span></strong></span></p>
@@ -739,17 +734,17 @@ window.onload = init16();
 <p style="text-align: justify;">&nbsp;</p>
 <p style="text-align: justify;"><span style="color: #f29400;"><strong><span style="font-family: verdana, geneva; font-size: 8pt;"></span></strong></span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"></span></p>
 <p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">NIDIAG A guide to spotting forgotten diseases. Investing in European success - EU-Africa cooperation in science, technology and innovation. Internet publication;. <a href=""></a> </span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"></span></p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">NIDIAG Une assistance pour diagnostiquer les maladies «oubliées». Investir dans la réussite européenne - Coopération entre l’Union européenne et l’Afrique dans le domaine des sciences, des technologies et de l’innovation. Internet publication;. <a href=""></a></span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"></span></p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">NIDIAG Um guia para detetar doenças esquecidas. Investir no sucesso europeu - Cooperação UE-África nos domínios da ciência, tecnologia e inovação. Internet publication;.</span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"><a href=""></span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"></span></p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">EU fighting neglected infectious diseases and training local health professionals in least developed countries. Internet publication;. <a href=""></a> </span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"></span></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">NIDIAG A guide to spotting forgotten diseases. Investing in European success - EU-Africa cooperation in science, technology and innovation. Internet publication;. <a ></a> </span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"></span></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">NIDIAG Une assistance pour diagnostiquer les maladies «oubliées». Investir dans la réussite européenne - Coopération entre l’Union européenne et l’Afrique dans le domaine des sciences, des technologies et de l’innovation. Internet publication;. <a ></a></span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"></span></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">NIDIAG Um guia para detetar doenças esquecidas. Investir no sucesso europeu - Cooperação UE-África nos domínios da ciência, tecnologia e inovação. Internet publication;.</span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"><a ></span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"></span></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">EU fighting neglected infectious diseases and training local health professionals in least developed countries. Internet publication;. <a ></a> </span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"></span></p>
 <p style="text-align: justify;">&nbsp;</p>
 <p style="text-align: justify;"><span style="color: #f29400;"><strong><span style="font-family: verdana, geneva; font-size: 8pt;"></span></strong></span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"></span></p>
 <p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">Boelaert M, Lutumba P, Chappuis F, Sacko M. Allo Docteur, RTNC2 Développement (Radio et Télévision Nationale du Congo). Interview on NID; Kinshasa, DRC. <a href=""></a> <a href=""></a> </span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"></span></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">Boelaert M, Lutumba P, Chappuis F, Sacko M. Allo Docteur, RTNC2 Développement (Radio et Télévision Nationale du Congo). Interview on NID; Kinshasa, DRC. <a ></a> <a ></a> </span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"></span></p>
 <p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">Büscher P. Allo Docteur, RTNC2 Développement (Radio et Télévision Nationale du Congo). Interview on the HAT Sero-K-SeT; Kinshasa, DRC.</span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"></span></p>
 <p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">Büscher P. Nouveau test rapide pour le diagnostic de la maladie du sommeil. Press release; Kinshasa, DRC.</span><br/><span style="font-family: verdana, geneva; font-size: 8pt;"></span></p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">Büscher P. Feu vert pour un test rapide pour la maladie du sommeil. Internet publication;<a href=""></a></span></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">Büscher P. Feu vert pour un test rapide pour la maladie du sommeil. Internet publication;<a ></a></span></p>
 <p>&nbsp;</p>
 
 </td>
@@ -771,7 +766,7 @@ window.onload = init16();
 <a id="menu4631" href="/copyright.html">Copyright</a>
 </td> 
 <td class="last46"> 
-<a id="menu4632" href="" target="_blank">By MLCOM</a>
+<a id="menu4632"  target="_blank">By MLCOM</a>
 </td> 
 </tr> 
 </table></div> 
