--- a/who-we-are/partners.html
+++ b/who-we-are/partners.html
@@ -338,7 +338,7 @@ background-color: #be0926 !important;
 </div><div id="wm-ipp-inside">
   <div id="wm-toolbar" style="position:relative;display:flex;flex-flow:row nowrap;justify-content:space-between;">
     <div id="wm-logo" style="/*width:110px;*/padding-top:12px;">
-      <a  title=" home page"><img src="../images/wayback-toolbar-logo-200.png" srcset="" alt="" style="width:100px" border="0" /></a>
+      <a  title=" home page"><img src="../images/toolbar-logo-200.png" srcset="" alt="" style="width:100px" border="0" /></a>
     </div>
     <div class="c" style="display:flex;flex-flow:column nowrap;justify-content:space-between;flex:1;">
       <form class="u" style="display:flex;flex-direction:row;flex-wrap:nowrap;" target="_top" method="get" action="/web/submit" name="wmtb" id="wmtb"><input type="text" name="url" id="wmtbURL" value="/partners.html" onfocus="this.focus();this.select();" style="flex:1;"/><input type="hidden" name="type" value="replay" /><input type="hidden" name="date" value="20151127074823" /><input type="submit" value="Go" />
@@ -604,7 +604,7 @@ window.onload = init16();
             </div>
                         <div id="contenu"> <div style="width:493px;">                       
                        <div style="padding-bottom:10px;"><span class="breadcrumbs pathway">
-<a href="./index.html" class="pathway">Home</a> <img src="../images/arrow.png" alt=""/> <a href="../whoweare.html class="pathway">Who we are</a> <img src="../images/arrow.png" alt=""/> Partners</span>
+<a href="./index.html" class="pathway">Home</a> <img src="../images/arrow.png" alt=""/> <a href="../whoweare.html" class="pathway">Who we are</a> <img src="../images/arrow.png" alt=""/> Partners</span>
 </div>
             
             <div></div>
