--- a/privateaccess.html
+++ b/privateaccess.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb">
 <head><script src="js/analytics.js" type="text/javascript"></script>
-<script type="text/javascript">window.addEventListener('DOMContentLoaded',function(){var v=archive_analytics.values;v.service='wb';v.server_name=''})</script>
 <script type="text/javascript" src="js/bundle-playback.js" charset="utf-8"></script>
 <script type="text/javascript" src="js/wombat.js" charset="utf-8"></script>
 <script>window.RufflePlayer=window.RufflePlayer||{};window.RufflePlayer.config={"autoplay":"on","unmuteOverlay":"hidden"};</script>
@@ -334,7 +333,7 @@ background-color: #be0926 !important;
 </div><div id="wm-ipp-inside">
   <div id="wm-toolbar" style="position:relative;display:flex;flex-flow:row nowrap;justify-content:space-between;">
     <div id="wm-logo" style="/*width:110px;*/padding-top:12px;">
-      <a href="" title="home page"><img src="images/wayback-toolbar-logo-200.png" srcset="" alt="" style="width:100px" border="0" /></a>
+      <a  title="home page"><img src="images/toolbar-logo-200.png" srcset="" alt="" style="width:100px" border="0" /></a>
     </div>
     <div class="c" style="display:flex;flex-flow:column nowrap;justify-content:space-between;flex:1;">
       <form class="u" style="display:flex;flex-direction:row;flex-wrap:nowrap;" target="_top" method="get" action="/web/submit" name="wmtb" id="wmtb"><input type="text" name="url" id="wmtbURL" value="http://nidiag.org/private-access" onfocus="this.focus();this.select();" style="flex:1;"/><input type="hidden" name="type" value="replay" /><input type="hidden" name="date" value="20160324115120" /><input type="submit" value="Go" />
@@ -343,7 +342,7 @@ background-color: #be0926 !important;
                 <div class="s" id="wm-nav-captures" style="flex:1;">
           </div>
         <div class="k">
-          <a href="" id="wm-graph-anchor">
+          <a  id="wm-graph-anchor">
             <div id="wm-ipp-sparkline" title="Explore captures for this URL" style="position: relative">
               <canvas id="wm-sparkline-canvas" width="725" height="27" border="0"></canvas>
             </div>
@@ -380,28 +379,28 @@ background-color: #be0926 !important;
                 <span class="xxs">
           <div id="wm-save-snapshot-success">success</div>
           <div id="wm-save-snapshot-fail">fail</div>
-          <a id="wm-save-snapshot-open" href="#" title="Share via My Web Archive" >
+          <a id="wm-save-snapshot-open"   >
             <span class="iconochive-web"></span>
           </a>
-          <a href="" title="Sign In" id="wm-sign-in">
+          <a  title="Sign In" id="wm-sign-in">
             <span class="iconochive-person"></span>
           </a>
           <span id="wm-save-snapshot-in-progress" class="iconochive-web"></span>
         </span>
-                <a class="xxs" href="" title="Get some help using the " style="top:-6px;"><span class="iconochive-question" style="color:rgb(87,186,244);font-size:160%;"></span></a>
+                <a class="xxs"  title="Get some help using the " style="top:-6px;"><span class="iconochive-question" style="color:rgb(87,186,244);font-size:160%;"></span></a>
         <a id="wm-tb-close" href="#close" style="top:-2px;" title="Close the toolbar"><span class="iconochive-remove-circle" style="color:#888888;font-size:240%;"></span></a>
       </div>
       <div id="wm-share" class="xxs">
-        <a href=""
+        <a 
            id="wm-screenshot"
            title="screenshot">
           <span class="wm-icon-screen-shot"></span>
         </a>
-        <a href="#" id="wm-video" title="video">
+        <a  id="wm-video" title="video">
           <span class="iconochive-movies"></span>
         </a>
-        <a id="wm-share-facebook" href="#" data-url="privateaccess.html" title="Share on Facebook" style="margin-right:5px;" target="_blank"><span class="iconochive-facebook" style="color:#3b5998;font-size:160%;"></span></a>
-        <a id="wm-share-twitter" href="#" data-url="privateaccess.html" title="Share on Twitter" style="margin-right:5px;" target="_blank"><span class="iconochive-twitter" style="color:#1dcaff;font-size:160%;"></span></a>
+        <a id="wm-share-facebook"  data-url="privateaccess.html" title="Share on Facebook" style="margin-right:5px;" target="_blank"><span class="iconochive-facebook" style="color:#3b5998;font-size:160%;"></span></a>
+        <a id="wm-share-twitter"  data-url="privateaccess.html" title="Share on Twitter" style="margin-right:5px;" target="_blank"><span class="iconochive-twitter" style="color:#1dcaff;font-size:160%;"></span></a>
       </div>
       <div style="padding-right:2px;text-align:right;white-space:nowrap;">
         <a id="wm-expand" class="wm-btn wm-closed" href="#expand" onclick="__wm.ex(event);return false;"><span id="wm-expand-icon" class="iconochive-down-solid"></span> <span class="xxs" style="font-size:80%;">About this capture</span></a>
@@ -415,19 +414,15 @@ background-color: #be0926 !important;
     <div style="padding:3px;position:relative" id="wm-collected-by-content">
             <div style="display:inline-block;vertical-align:top;width:50%;">
 			<span class="c-logo" style="background-image:url(/images/webwidecrawl.jpeg);"></span>
-		Organization: <a style="color:#33f;" href="" target="_new"><span class="wm-title">Internet Archive</span></a>
+		Organization: 
 		<div style="max-height:75px;overflow:hidden;position:relative;">
 	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
-	  The Internet Archive discovers and captures web pages through many different web crawls.
-
-At any given time several distinct crawls are running, some for months, and some every day or longer.
-
-View the web archive through the <a href=""></a>.
+	  
 	</div>
 	      </div>
       <div style="display:inline-block;vertical-align:top;width:49%;">
 			<span class="c-logo" style="background-image:url(/images/wide00013.jpeg)"></span>
-		<div>Collection: <a style="color:#33f;" href="" target="_new"><span class="wm-title">Wide Crawl Number 13</span></a></div>
+		<div>Collection: <a style="color:#33f;"  target="_new"><span class="wm-title">Wide Crawl Number 13</span></a></div>
 		<div style="max-height:75px;overflow:hidden;position:relative;">
 	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
 	  Web Wide Crawl Number 13
@@ -598,7 +593,7 @@ window.onload = init16();
                 <div id="pied_news"></div>
                 </div>
                 <div style="padding-left: 50%; margin-left: -34px;">
-                								<a href="" target="_blank"><div id="fp72"></div></a>
+                								<a  target="_blank"><div id="fp72"></div></a>
                 </div>
             </div>
                         <div id="contenu"> <div style="width:493px;">                       
@@ -636,15 +631,15 @@ window.onload = init16();
 </fieldset>
 <ul>
 	<li>
-		<a href="">
+		<a >
 		Forgot your Password?</a>
 	</li>
 	<li>
-		<a href="">
+		<a >
 		Forgot your Username?</a>
 	</li>
 		<li>
-		<a href="">
+		<a >
 			Register</a>
 	</li>
 	</ul>
@@ -668,7 +663,7 @@ window.onload = init16();
 <a id="menu4631" href="/copyright.html">Copyright</a>
 </td> 
 <td class="last46"> 
-<a id="menu4632" href="" target="_blank">By MLCOM</a>
+<a id="menu4632"  target="_blank">By MLCOM</a>
 </td> 
 </tr> 
 </table></div> 
