change image and links page

--- a/activity.html
+++ b/activity.html
@@ -462,7 +462,7 @@ background-color: #be0926 !important;
 <a id="menu167" href="/publcations.html">Press and Scientific Publications</a>
 </td> 
 <td> 
-<a id="menu169" href="/links.html">Links</a>
+<a id="menu169" href="/links.html">Links & Partners</a>
 </td> 
 <td> 
 <a id="menu168" href="/contacts.html">Contacts</a>
