--- a/whoweare.html
+++ b/whoweare.html
@@ -773,7 +773,7 @@
                 >
               </td>
               <td>
-                <a id="menu169" href="/links.html">Links</a>
+                <a id="menu169" href="/links.html">Links & Partners</a>
               </td>
               <td>
                 <a id="menu168" href="/contacts.html">Contacts</a>
@@ -797,7 +797,7 @@
                 TransMenu.reference.bottomLeft
               );
               var menu162 = ms.addMenu(document.getElementById("menu162"));
-              menu162.addItem("Links & Partners", "who-we-are/partners.html", "0");
+              menu162.addItem("Links & Partners", "/links.html", "0");
               var menu164 = ms.addMenu(document.getElementById("menu164"));
               menu164.addItem("Context", "", "0");
               menu164.addItem(
@@ -1020,7 +1020,7 @@
                     ><span style="font-family: verdana, geneva"
                       ><span style="font-size: 8pt"
                         ><a
-                          href="/who-we-are/partners.html"
+                          href="/links.html"
                           >View all Links & Partners </a
                         ></span
                       ></span
