--- a/publcations.html
+++ b/publcations.html
@@ -472,7 +472,7 @@ background-color: #be0926 !important;
 <a id="menu167" href="/publcations.html">Press and Scientific Publications</a>
 </td> 
 <td> 
-<a id="menu169" href="/links.html">Links</a>
+<a id="menu169" href="/links.html">Links & Partners</a>
 </td> 
 <td> 
 <a id="menu168" href="/contacts.html">Contacts</a>
@@ -488,7 +488,7 @@ background-color: #be0926 !important;
 if (TransMenu.isSupported()) {
 var ms = new TransMenuSet(TransMenu.direction.down, 0,0, TransMenu.reference.bottomLeft);
 var menu162 = ms.addMenu(document.getElementById("menu162"));
- menu162.addItem("Links & Partners", "who-we-are/partners.html", "0");
+ menu162.addItem("Links & Partners", "/links.html", "0");
 var menu164 = ms.addMenu(document.getElementById("menu164"));
  menu164.addItem("Context", "", "0");
 menu164.addItem("Expected Outcomes", "", "0");
